--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@types/react-icons": "^3.0.0",
+    "@types/react-modal": "^3.16.3",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
+    "react-modal": "^3.16.1",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
     "styled-components": "^6.1.9"
